Fiddle about with header and footer colliding Header can no longer go offscreen whilst in fixed mode

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -215,7 +215,8 @@ Medium Device Styles
 Small Device Styles
 *******************************************************************************/
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 720px),
+       screen and (max-width: 800px) and (max-height: 400px) {
   body {
     font-size:14px;
   }
@@ -283,7 +284,9 @@ Small Device Styles
 }
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px),
+       screen and (max-height: 320px),
+       screen and (max-height: 540px) and (max-width: 1723px){
   footer {
     width:270px;
     position:relative;
